--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -273,7 +273,7 @@
   "settings.display.themeNames.yellow": "Yellow",
   "settings.menu.display.link.label": "Themes",
   "settings.menu.general.link.label": "General",
-  "settings.menu.stakePools.link.label": "Stake Pools",
+  "settings.menu.stakePools.link.label": "Stake pools",
   "settings.menu.support.link.label": "Support",
   "settings.menu.termsOfUse.link.label": "Terms of service",
   "settings.stakePools.smash.select.label": "Off-chain data server (SMASH)",
