--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -273,7 +273,7 @@
   "settings.display.themeNames.yellow": "イエロー",
   "settings.menu.display.link.label": "テーマ",
   "settings.menu.general.link.label": "一般",
-  "settings.menu.stakePools.link.label": "!!!Stake Pools",
+  "settings.menu.stakePools.link.label": "ステークプール",
   "settings.menu.support.link.label": "ユーザーサポート",
   "settings.menu.termsOfUse.link.label": "サービス利用規約",
   "settings.stakePools.smash.select.label": "!!!Off-chain data server (SMASH)",
