[DDW-481] Text and styling adjustments

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -276,11 +276,11 @@
   "settings.menu.stakePools.link.label": "Stake pools",
   "settings.menu.support.link.label": "Support",
   "settings.menu.termsOfUse.link.label": "Terms of service",
-  "settings.stakePools.smash.select.label": "Off-chain data server (SMASH)",
+  "settings.stakePools.smash.select.label": "Off-chain metadata server (SMASH)",
   "settings.stakePools.smash.select.placeholder": "Custom server",
   "settings.stakePools.smashUrl.input.invalidUrl": "Invalid URL",
   "settings.stakePools.smashUrl.input.label": "SMASH server URL",
-  "settings.stakePools.smashUrl.input.placeholder": "Enter custom server",
+  "settings.stakePools.smashUrl.input.placeholder": "Enter custom server URL",
   "settings.support.faq.content": "If you are experiencing a problem, please look for guidance using the list of {faqLink} on the support pages. If you can’t find a solution, please submit a support ticket.",
   "settings.support.faq.faqLink": "Known Issues",
   "settings.support.faq.faqLinkURL": "https://daedaluswallet.io/known-issues/",
