[DDW-438]: Wallet public key visible - draft

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -147,6 +147,9 @@
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
   "global.labels.token": "Token",
+  "global.labels.reveal": "Reveal",
+  "global.labels.hide": "Hide",
+  "global.labels.copy": "Copy",
   "global.language.chinese": "Chinese",
   "global.language.croatian": "Croatian",
   "global.language.english": "English",
@@ -831,6 +834,9 @@
   "wallet.settings.password": "Password",
   "wallet.settings.passwordLastUpdated": "Last updated {lastUpdated}",
   "wallet.settings.passwordNotSet": "You still don't have password",
+  "wallet.settings.walletPublicKey": "Wallet public key",
+  "wallet.settings.walletPublicKeyShowInstruction": "To show wallet public key click \"Reveal\" button",
+  "wallet.settings.showQRCode": "Show QR code",
   "wallet.settings.recoveryPhraseInputHint": "Enter recovery phrase",
   "wallet.settings.recoveryPhraseInputNoResults": "No results",
   "wallet.settings.recoveryPhraseStep1Button": "Continue",
